syntax = "proto3";

import "google/protobuf/struct.proto";

option java_multiple_files = true;
option java_package = "com.netscope.grpc.proto";
option java_outer_classname = "NetScopeProto";

package netscope;

message InvokeRequest {
  string bean_name                  = 1;
  string method_name                = 2;
  google.protobuf.ListValue arguments = 3;
  repeated string parameter_types   = 4;
}

message InvokeResponse {
  // Native JSON value â€” objects, arrays, primitives all work
  google.protobuf.Value result = 1;
}

message MethodInfo {
  string bean_name                    = 1;
  string method_name                  = 2;
  bool   secured                      = 3;
  string return_type                  = 4;
  repeated ParameterInfo parameters   = 5;
  repeated string required_scopes     = 6;
  string description                  = 7;
}

message ParameterInfo {
  string name  = 1;
  string type  = 2;
  int32  index = 3;
}

message DocsRequest {}

message DocsResponse {
  repeated MethodInfo methods = 1;
}

service NetScopeService {
  rpc InvokeMethod       (InvokeRequest)        returns (InvokeResponse);
  rpc GetDocs            (DocsRequest)           returns (DocsResponse);
  rpc InvokeMethodStream (stream InvokeRequest)  returns (stream InvokeResponse);
}
